--- a/Programs/Program1/README
+++ b/Programs/Program1/README
@@ -2,3 +2,4 @@ Chris Bae
 Lab: 12pm
 
 My make file creates an executable called "trace"
+I am unable to create 2 new trace files due to restrictions from my apartment.
